--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/system": "^5.14.18",
+    "framer-motion": "^11.0.28",
     "mongodb": "6.3",
     "next": "14.0.3",
     "react": "^18",
