--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb": "6.3",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
