--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/system": "^5.14.18",
     "framer-motion": "^11.0.28",
     "mongodb": "6.3",
-    "next": "14.0.3",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
